--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   path_provider: ^2.0.11
   health: ^4.1.1
   shared_preferences: ^2.0.15
+  syncfusion_flutter_charts: ^20.3.48
+  fluttericon: ^2.0.0
+  intl: ^0.17.0
+  animated_text_kit: ^4.2.2
+  syncfusion_flutter_datepicker: ^20.3.50
+  syncfusion_flutter_gauges: ^20.3.50
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +59,17 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "assets/icons/goatReport_appIcon.png"
+#    adaptive_icon_background: "#FFFFFF"
+#    adaptive_icon_foreground: "assets/images/icon.png"
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +86,17 @@ flutter:
   assets:
 
     - assets/raw/health_list.json
+    - assets/logos/logo-color.png
+    - assets/logos/logo-no-background.png
+    - assets/icons/goat_icon.png
+    - assets/icons/goatReport_icon.png
+    - assets/icons/goatReport_appIcon.png
+    - assets/images/bmi_light.png
+    - assets/images/bmi_dark.png
+    - assets/images/rectangle_pointer.png
+    - assets/raw/chart_data.json
+    - assets/raw/chart2.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
